--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
             attribute vec2 aUV;
             attribute vec4 aColor;
 
-            uniform mat4 uMVMatrix;
-            uniform mat4 uPMatrix;
+            uniform mat4 uMVPMatrix;
 
             varying highp vec2 vUV;
             varying lowp vec4 vColor;
 
             void main(void) {
-                gl_Position = uPMatrix * uMVMatrix * vec4(aPos, 1.0);
+                gl_Position = uMVPMatrix * vec4(aPos, 1.0);
                 vUV = aUV;
                 vColor = aColor;
             }
