--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
         <script type="text/javascript" src="src/fishtank.js"></script>
     </head>
     <body>
-        <canvas id="canvas3D" width="800" height="600">
-            Sorry, your browser doesn't support the &lt;canvas&gt; element.
-        </canvas>
+        <div class="wrapper">
+            <canvas id="canvas3D" width="800" height="600">
+                Sorry, your browser doesn't support the &lt;canvas&gt; element.
+            </canvas>
+            <div class="popup" id="loading">
+                <img src="images/jelly.png" alt="Title: Jelly">
+            </div>
+            <canvas class="score" id="score" width="80" height="60">
+            </canvas>
+        </div>
         <div class="controls" id="controls">
             <div class="menuBorder">
                 <div class="menuToggle">
