Trying to fix no keyboard events on Itch

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="src/fishtank.js"></script>
     </head>
     <body>
-        <div class="wrapper">
+        <div class="wrapper" id="wrapper">
             <canvas id="canvas3D" width="800" height="600">
                 Sorry, your browser doesn't support the &lt;canvas&gt; element.
             </canvas>
