Hook up title bits.

--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
             </canvas>
             <canvas class="score" id="score" width="80" height="60">
             </canvas>
-            <div class="overlay hidden">
+            <div class="overlay" id="overlay">
                 <div class="centeredHigh" id="title">
                     <img src="images/title.png" alt="Title: Jelly Jelly">
                 </div>
                 <div class="topLeft" id="tojam">
                     <img src="images/tojam.png" alt="T.O.Jam What Twelves Below">
                 </div>
-                <div class="centeredLow" id="instructions">
+                <div class="centeredLow" id="loading">
+                    <img src="images/loading.png" alt="Loading">
+                </div>
+                <div class="centeredLow hidden" id="instructions">
                     <img src="images/instructions.png" alt="Instructions">
                 </div>
                 <div class="bottomCenter" id="credits">
