--- a/index.html
+++ b/index.html
@@ -89,16 +89,9 @@
                     </div>
                     <button id="buttonClipboard" type="button">Copy To Clipboard</button>
                 </form>
-                <textarea id="textData" rows="10" cols="34">
-                </textarea>
+                <textarea id="textData" rows="10" cols="34"></textarea>
             </div>
         </div>
-        <script type="text/javascript">
-            window.onload = function(e) {
-                MAIN.setupToggleControls();
-                FISHTANK.start();
-            };
-        </script>
         <script id="vertex-test" type="x-shader/x-vertex">
             attribute vec3 aPos;
             attribute vec2 aUV;
