Add an 'edit' mode.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                         </div>
                     </div>
                     <button id="buttonClipboard" type="button">Copy To Clipboard</button>
+                    <button id="buttonEdit" type="button">Toggle Edit Mode</button>
                 </form>
                 <textarea id="textData" rows="10" cols="34"></textarea>
             </div>
