Add win condition.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <img src="images/credits.png" alt="Credits">
                 </div>
             </div>
+            <div class="win hidden" id="win">
+                <img src="images/win.png" alt="You Win">
+            </div>
         </div>
         <div class="controls" id="controls">
             <div class="menuBorder">
