Use blitblort with moved js files.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <title>ToJam 12</title>
         <link href="style.css" rel="stylesheet">
 
-        <script type="text/javascript" src="blitblort/src/test.js"></script>
-        <script type="text/javascript" src="blitblort/src/blit.js"></script>
-        <script type="text/javascript" src="blitblort/src/tick.js"></script>
-        <script type="text/javascript" src="blitblort/src/blort.js"></script>
-        <script type="text/javascript" src="blitblort/src/io.js"></script>
-        <script type="text/javascript" src="blitblort/src/entropy.js"></script>
-        <script type="text/javascript" src="blitblort/src/r2.js"></script>
-        <script type="text/javascript" src="blitblort/src/r3.js"></script>
-        <script type="text/javascript" src="blitblort/src/wgl.js"></script>
-        <script type="text/javascript" src="blitblort/src/blob.js"></script>
-        <script type="text/javascript" src="blitblort/src/improc.js"></script>
-        <script type="text/javascript" src="blitblort/src/blump.js"></script>
-        <script type="text/javascript" src="blitblort/src/main.js"></script>
+        <script type="text/javascript" src="blitblort/test.js"></script>
+        <script type="text/javascript" src="blitblort/blit.js"></script>
+        <script type="text/javascript" src="blitblort/tick.js"></script>
+        <script type="text/javascript" src="blitblort/blort.js"></script>
+        <script type="text/javascript" src="blitblort/io.js"></script>
+        <script type="text/javascript" src="blitblort/entropy.js"></script>
+        <script type="text/javascript" src="blitblort/r2.js"></script>
+        <script type="text/javascript" src="blitblort/r3.js"></script>
+        <script type="text/javascript" src="blitblort/wgl.js"></script>
+        <script type="text/javascript" src="blitblort/blob.js"></script>
+        <script type="text/javascript" src="blitblort/improc.js"></script>
+        <script type="text/javascript" src="blitblort/blump.js"></script>
+        <script type="text/javascript" src="blitblort/main.js"></script>
         <script type="text/javascript" src="src/fishtank.js"></script>
     </head>
     <body>
