--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>ToJam 12</title>
+        <title>Jelly Jelly - ToJam 12</title>
         <link href="style.css" rel="stylesheet">
 
         <script type="text/javascript" src="blitblort/test.js"></script>
